--- a/index.html
+++ b/index.html
@@ -334,5 +334,6 @@
             endBtn.classList.add('hidden');
         }
     </script>
+    <!-- Way to find the answer: console.log((await fetch('https://xiaoce.fun/api/v0/quiz/daily/addRecord?type=guess_word&date='+curDate+'&status=success').then(res=>res.json())).data.data.wordAnswer); -->
 </body>
 </html>
